--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required(VERSION 3.14)
 
 # Project-level configuration.
-set(PROJECT_NAME "audio_output")
+set(PROJECT_NAME "raw_audio")
 project(${PROJECT_NAME} LANGUAGES CXX)
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
@@ -14,12 +14,12 @@ cmake_policy(VERSION 3.14...3.25)
 
 # This value is used when generating builds using this plugin, so it must
 # not be changed
-set(PLUGIN_NAME "audio_output_plugin")
+set(PLUGIN_NAME "raw_audio_plugin")
 
 # Any new source files that you add to the plugin should be added here.
 list(APPEND PLUGIN_SOURCES
-  "audio_output_plugin.cpp"
-  "audio_output_plugin.h"
+  "raw_audio_plugin.cpp"
+  "raw_audio_plugin.h"
   "audio_writer.cpp"
   "audio_writer.h"
   "audio_writing_context.h"
@@ -29,8 +29,8 @@ list(APPEND PLUGIN_SOURCES
 # Define the plugin library target. Its name must not be changed (see comment
 # on PLUGIN_NAME above).
 add_library(${PLUGIN_NAME} SHARED
-  "include/audio_output/audio_output_plugin_c_api.h"
-  "audio_output_plugin_c_api.cpp"
+  "include/raw_audio/raw_audio_plugin_c_api.h"
+  "raw_audio_plugin_c_api.cpp"
   ${PLUGIN_SOURCES}
 )
 
@@ -55,7 +55,7 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
 # List of absolute paths to libraries that should be bundled with the plugin.
 # This list could contain prebuilt libraries, or libraries created by an
 # external build triggered from this build file.
-set(audio_output_bundled_libraries
+set(raw_audio_bundled_libraries
   ""
   PARENT_SCOPE
 )
@@ -85,7 +85,7 @@ FetchContent_MakeAvailable(googletest)
 # The plugin's C API is not very useful for unit testing, so build the sources
 # directly into the test binary rather than using the DLL.
 add_executable(${TEST_RUNNER}
-  test/audio_output_plugin_test.cpp
+  test/raw_audio_plugin_test.cpp
   ${PLUGIN_SOURCES}
 )
 apply_standard_settings(${TEST_RUNNER})
