--- a/example/windows/runner/Runner.rc
+++ b/example/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "audio_output_example" "\0"
+            VALUE "FileDescription", "raw_audio_example" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "audio_output_example" "\0"
+            VALUE "InternalName", "raw_audio_example" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "audio_output_example.exe" "\0"
-            VALUE "ProductName", "audio_output_example" "\0"
+            VALUE "OriginalFilename", "raw_audio_example.exe" "\0"
+            VALUE "ProductName", "raw_audio_example" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
